<resources>
    <string name="app_name">Smart Mall</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_category">Category</string>
    <string name="title_cart">Cart</string>
    <string name="error">Error</string>
    <string name="Pages_Login_UserNameRequired">user name is required</string>
    <string name="Pages_Login_PasswordRequired">password is required</string>
    <string name="Pages_Login_EmailRequired">email is required</string>
    <string name="Pages_Login_PhoneRequired">phone is required</string>
    <string name="Pages_Login_PasswordNotMatch">password not match</string>
    <string name="check_network">Please check your connection</string>
    <string name="write_review">Write Review</string>
    <string name="review">Review</string>
    <string name="reviewisrquerd">review is required</string>
    <string name="title_profile">Profile</string>
    <string name="special">special</string>
    <string name="discount">discount</string>
    <string name="currency">R.S</string>
    <string name="all_orders">All Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="unpaid">Unpaid</string>
    <string name="history">History</string>
    <string name="shipped">Shipped</string>
    <string name="reviews">Reviews</string>
    <string name="returns">Returns</string>
    <string name="wallet">Wallet</string>
    <string name="allowance">Allowance</string>
    <string name="balance">Balance</string>
    <string name="payment_cards">Payment Cards</string>
    <string name="my_chic_coins">My chic-coins</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="support">Support</string>
    <string name="message">Message</string>
    <string name="order_information">Order Information</string>
    <string name="view_your_current_order_status">View your current order status.</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_lord_still_remember_me">My Lord, still remember me?</string>
    <string name="notification">Notification</string>
    <string name="messages_of_your_shopping_cart">Messages of your shopping cart.</string>
    <string name="promotion_events">Promotion Events</string>
    <string name="keep_up_to_date_on_the_promotions">Keep up-to-date on the promotions.</string>
    <string name="smart_mall_recommendations">Smart Mall Recommendations</string>
    <string name="only_3_3_you_can_enjoy_free">Only $3.3, You can enjoy free...</string>
    <string name="coupon">Coupon</string>
    <string name="my_info">My Info</string>
    <string name="shipping_adddress">Shipping Address</string>
    <string name="language">Language</string>
    <string name="country_region">Country/Region</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="rate_app">Rate App</string>
    <string name="about_smart_mall">About Smart Mall</string>
    <string name="phone_number">Phone Number</string>
    <string name="skip">Skip</string>
    <string name="password">Password</string>
    <string name="forget_passowrd">forget password</string>
    <string name="signin">Sign in</string>
    <string name="or">Or</string>
    <string name="signingogle">Sign in Google</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="press_back_again">press BACK again</string>
    <string name="preparing">Preparing</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="check_network_">Please check your connection</string>
    <string name="welcome">Welcom</string>
    <string name="done">Done</string>
    <string name="cart">Cart</string>
    <string name="donthavegift">You have gift, can get it</string>
    <string name="getit">Get It</string>
    <string name="dontwait">Dont wait its achance</string>
    <string name="category">category</string>
    <string name="seeall">See all</string>
    <string name="explore">Explore</string>
    <string name="offersdont">Offers dont miss</string>
    <string name="fashion">Fashion</string>
    <string name="must_buy_list">Must Buy List</string>
    <string name="welcom_samrt">Welcome to Smart Mall</string>
    <string name="details">Details</string>
    <string name="informations">Informations</string>
    <string name="buy_now">BUY NOW</string>
    <string name="rates">rates</string>
    <string name="write_comment">Write comment</string>
    <string name="may_like">You may like</string>
    <string name="price_from_lower_to_higher">price from lower to higher</string>
    <string name="price_from_higher_to_lower">price from higher to lower</string>
    <string name="most_popular">most popular</string>
    <string name="you_are_not_login">you are not login</string>
    <string name="check_out">Check out</string>
    <string name="add_address">Add Address</string>
    <string name="please_fill_in_the_shipping_address">Please fill in the shipping address</string>
    <string name="product_total">Product Total:</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_qty">Total Qty:</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="first_name">First name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">state</string>
    <string name="street">Street</string>
    <string name="address_detail">Address Detail</string>
    <string name="note">Note</string>
    <string name="mobile_number2">Mobile Number2</string>
    <string name="mobile_number1">Mobile Number1</string>
    <string name="nearest_landmark">Nearest landmark</string>
    <string name="quantity">quantity</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="volume">Volume</string>
    <string name="last_name">Last Name</string>
    <string name="district">District</string>
    <string name="postal_code">Postal Code</string>
    <string name="home">Home</string>
    <string name="work">Work</string>


</resources><!--<string name="app_name">Smart Mall</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_category">Category</string>
    <string name="title_cart">Cart</string>
    <string name="error">Error</string>
    <string name="Pages_Login_UserNameRequired">user name is required</string>
    <string name="Pages_Login_PasswordRequired">password is required</string>
    <string name="Pages_Login_EmailRequired">email is required</string>
    <string name="Pages_Login_PhoneRequired">phone is required</string>
    <string name="Pages_Login_PasswordNotMatch">password not match</string>
    <string name="check_network">Please check your connection</string>
    <string name="write_review">Write Review</string>
    <string name="review">Review</string>
    <string name="reviewisrquerd">review is required</string>
    <string name="title_profile">Profile</string>
    <string name="special">special</string>
    <string name="discount">discount</string>
    <string name="currency">currency</string>-->