<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.ProfileSettingActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/district"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code"
                    android:padding="5dp"
                    android:inputType="number"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/address_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_detail"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/nearst_landman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nearest_landmark"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/mobile_number1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number1"
                    android:inputType="phone"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/mobile_number2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number2"
                    android:inputType="phone"
                    android:padding="5dp"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/shopping_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    app:met_floatingLabel="highlight"
                    android:padding="5dp" />

                <RadioGroup
                    android:id="@+id/location_type_RB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/homeRB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/workRB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work"
                        android:textColor="@color/colorPrimary" />
                </RadioGroup>

                <info.hoang8f.widget.FButton
                    android:id="@+id/btn_add_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="14dp"
                    android:text="@string/add_address"
                    android:textColor="@android:color/white"
                    app:cornerRadius="30dp"
                    app:fButtonColor="@color/colorPrimary"
                    app:shadowColor="@color/colorPrimaryDark"
                    app:shadowHeight="2dp"
                    fbutton:shadowEnabled="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>