<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_bottom_sheet_heading"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/price_lower_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/price_from_lower_to_higher"
            android:textAlignment="textStart"
            android:textColor="@color/stay_color"
            android:buttonTint="@color/colorPrimary"/>
        <RadioButton
            android:id="@+id/price_high_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/price_from_higher_to_lower"
            android:textAlignment="textStart"
            android:textColor="@color/stay_color"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/most_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/most_popular"
            android:textAlignment="textStart"
            android:textColor="@color/stay_color"
            android:buttonTint="@color/colorPrimary"/>
    </RadioGroup>


</LinearLayout>