<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activites.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/skip"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/login_btn_shape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/login_btn_shape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/forget_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:text="@string/forget_passowrd" />

            <info.hoang8f.widget.FButton
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:text="@string/signin"
                android:textColor="@android:color/white"
                app:cornerRadius="10dp"
                app:fButtonColor="@color/colorPrimary"
                app:shadowColor="@color/colorPrimaryDark"
                app:shadowHeight="2dp"
                fbutton:shadowEnabled="true" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="20sp" />
            </FrameLayout>

            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/google_icon"
                android:drawablePadding="14dp"
                android:text="@string/signingogle"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />-->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/default_google_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:buttonSize="wide" />

            <info.hoang8f.widget.FButton
                android:id="@+id/btn_signup"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:text="@string/signup"
                android:textColor="@android:color/black"
                app:cornerRadius="10dp"
                app:fButtonColor="@android:color/white"
                app:shadowColor="@android:color/white"
                app:shadowHeight="2dp"
                fbutton:shadowEnabled="true" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>